correct typed visibility and add second typer
sometimes text was visible before typing began.

add another type js process for dates in posts because it has no
centering issues this way.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -204,7 +204,7 @@ table a:not(.btn), .table a:not(.btn) {
 }
 
 .typed-box{
-    height: 80px;
+    height: 100px;
     text-align: center;
 }
 
